--- a/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.css
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.css
@@ -1,54 +1,71 @@
-.login-container{
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
+body {
+    margin: 0;
+    padding: 0;
     justify-content: center;
-    .title {
-        font-size: 34px;
-        font-weight: bold;
-        text-align: center;
-        margin-bottom: 16;
-    }
-    .title-intro {
-        font-size: 24px;
-        font-weight: bold;
-        text-align: center;
-    }
+    align-items: center;
+    min-height: 100vh;
+    font-family: 'Jost', sans-serif;
+    background: linear-gradient(to bottom, #0f0c29,#302b63,#24243e);
+}
 
-    .login-content {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-    }
-    .forgot-label {
-        font-size: 16;
-        color: #0152D5;
-        text-align: center;
+.main {
+    width: 350px;
+    height: 500px;
+    background: red;
+    overflow: hidden;
+    background: url("fitness.jpg") no-repeat center / cover; 
+    border-radius: 10px;
+    box-shadow: 5px 20px 50px #000;
+}
 
-    }
-    .alternative {
-        text-align: center;
-        font-weight: 500;
-        span{
-            color: #0152D5;
-        }
-    }
+#chk{
+    display: none;
+}
 
-    .or-line-divider {
-        border-top: 10px;
-        
-        border-color: black;
-        position: relative;
-        margin-top: 40;
-        p{
-            position: absolute;
-            background-color: white;
-            width: 30px;
-            transform: translate(-50%,-50%);
-            text-align: center;
-            left: 50%;
-        }
-    }
+.signup {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 
+label {
+    color: #fff;
+    font-size: 2.3em;
+    justify-content: center;
+    display: flex;
+    margin: 60px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+}
+input {
+    width: 60%;
+    height: 20px;
+    background: #e0dede;
+    justify-content: center;
+    display: flex;
+    margin: 20px auto;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+
+}
+
+button {
+    width: 60%;
+    height: 40px;
+    margin: 10px auto;
+    justify-content: center;
+    display: block;
+    color: #fff;
+    background: #573b8a;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 20px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    transition: .2s ease-in;
+    cursor: pointer;
 }
