--- a/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.css
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.css
@@ -1,48 +1,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
-.body {
+body {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background:rgb(130, 106,251);
+    background: rgb(130, 106, 251);
+    background-image: url(fitnes2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 .container {
     position: relative;
     max-width: 700px;
+    background: #C0C0C0;
     width: 100%;
-    background: #fff;
-    padding: 25px;
+    padding: 25px; 
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
+
 .container header {
     font-size: 1.5rem;
     color: #333;
     font-weight: 500;
     text-align: center;
 }
+
 .container .form {
-    margin-top: 30px;
+    margin-top: 10px;
+   
 }
+
 .form .input-box {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 15px;
 }
-.input-box .label {
+
+.input-box label {
     color: #333;
 }
-.form :where(.input-box input, .select-box){
+
+.form :where(.input-box input, .select-box, .btn) {
+    
     position: relative;
-    height: 50px;
+    height: 10%;
     width: 100%;
     outline: none;
     font-size: 1rem;
@@ -51,7 +61,28 @@
     border: 1px solid #ddd;
     border-radius: 6px;
     padding: 0 15px;
+    padding-left: 0;
 }
+
+.btn {
+    height: 55px;
+    width: 50%;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    font-weight: 400;
+    transition: all 0.2s ease;
+    background-color: rgb(130, 106, 251);
+}
+
+.input-box input:focus::-webkit-input-placeholder {
+    box-shadow: 0 1px 0 rgba(0,0,0,0.1);
+    color: transparent!important;
+    
+}
+
 .form .column {
     display: flex;
     column-gap: 15px;
@@ -77,6 +108,7 @@
 
 .form .gender {
     column-gap: 5px;
+    cursor: pointer;
 }
 
 .gender input {
@@ -87,9 +119,15 @@
     cursor: pointer;
 }
 
-.adress :where(input, .select-box) {
-    margin-top: 15px;
+.gender label {
+    color: #707070;
 }
+
+.addres :where(input, .select-box, .btn) {
+    margin-top: 15px;
+    width: 100%;
+}
+
 
 .select-box select {
     height: 100%;
@@ -99,8 +137,21 @@
     color: #707070;
     font-size: 1rem;
 }
+.btn {
+    height: 55px;
+    width: 50%;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    font-weight: 400;
+    transition: all 0.2s ease;
+    background-color: rgb(130, 106, 251);
+}
 
-.form button {
+
+.form .btn2 {
     height: 55px;
     width: 100%;
     color: #fff;
@@ -115,15 +166,15 @@
 }
 
 .form button:hover {
-    background-color: rgb(88, 56, 250);
+    background-color: rgb(88, 56, 250); 
 }
 
-/* Responsive */
-
-@media screen and (max-width: 500px) {
+/* Responsive*/
+@media screen and (max-width: 500px){
     .form .column {
         flex-wrap: wrap;
     }
+
     .form :where(.gender-option, .gender) {
         row-gap: 15px;
     }
