--- a/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.html
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.html
@@ -1,72 +1,128 @@
-<div class="body">
-<section class="container">
-    <header>Registration Form</header>
-    <form action="#" class="form">
-        <div class="input-box">
-            <label>Full Name</label>
-            <input type="text" placeholder="Enter full name" required/>
-        </div>
-
-        <div class="input-box">
-            <label>Email Address</label>
-            <input type="text" placeholder="Enter email adress" required/>
-        </div>
-
-        <div class="column">
+<body>
+    <section class="container">
+        <header>Forma za registraciju</header>
+        <form action="#" class="form" [formGroup]="form">
             <div class="input-box">
-                <label>Phone number</label>
-                <input type="text" placeholder="Enter phone number" required/>
+                <label for="usrName">Ime</label>
+                <input formControlName="firstName" type="text" id="usrName" placeholder="Unesite ime" style="height: 40px;" required/>
             </div>
-
             <div class="input-box">
-                <label>Birth date</label>
-                <input type="text" placeholder="Enter birth date" required/>
-            </div>           
-        </div>
-
-        <div class="gender-box">
-            <h3>Gender</h3>
-            <div class="gender-option">
-                   <div class="gender">
-                    <input type="radio" id="check-male" name="gender" checked>
-                    <label for="check-male">Male</label>
-                   </div> 
-                   <div class="gender">
-                    <input type="radio" id="check-female" name="gender">
-                    <label for="check-female">Female</label>
-                   </div> 
-                   <div class="gender">
-                    <input type="radio" id="check-other" name="gender">
-                    <label for="check-other">Prefer not to say</label>
-                   </div> 
+                <label for="usrLastName">Prezime</label>
+                <input formControlName="lastName" type="text" id="usrLastName" placeholder="Unesite prezime" style="height: 40px;" required/>
             </div>
-        </div>
-
-        <div class="input-box adress">
-            <label>Address</label>
-            <input type="text" placeholder="Enter street address" required/>
-            <input type="text" placeholder="Enter street address line 2" required/>
+            <div class="input-box">
+                <label for="usrUserName">Korisničko ime</label>
+                <input formControlName="userName" type="text" id="usrUserName" placeholder="Unesite korisničko ime" style="height: 40px;" required />
+            </div>
+            <div class="input-box">
+                <label for="usrPassword">Lozinka</label>
+                <input formControlName="password" type="text" id="usrPassword" placeholder="Unesite lozinku" style="height: 40px;" required/>
+            </div>
+            <div class="input-box">
+                <input type="text" id="usrPassword2" placeholder="Potvrdite lozinku" style="height: 40px;" required/>
+            </div>
             
-            <div class="column">
-                <div class="select-box">
-                    <select>
-                        <option hidden>Country</option>
-                        <option>Srbija</option>
-                        <option>Bosna</option>
-                        <option>Hrvatska</option>
-                        <option>Italija</option>
-                    </select>
+            <div class="input-box">
+                <label for="userEmail">Email</label>
+                <input formControlName="email" type="email" id="userEmail" placeholder="Unesite email adresu" style="height: 40px;" required/>
+            </div>
 
+            <div class="input-box addres"> 
+                <div class="column">
+                    <div class="select-box" style="height: 40px; width: 300px;">
+                        <select formControlName="city" id="usrCity" style="width: 300px; border-radius: 6px;">
+                            <option hidden>Grad</option>
+                            <option>Banja Luka</option>
+                            <option>Bijeljina</option>
+                            <option>Prijedor</option>
+                            <option>Doboj</option>
+                            <option>Istočno Sarajevo</option>
+                            <option>Trebinje</option>
+                        </select>
+                    </div>
+                    <button id="usrAvatar" class="btn" style="color: white; height: 40px;">Avatar</button>
+                </div>
+            </div>
+            <button class="btn2" style="height: 45px;" type="submit" (click)="add()">Submit</button>
+        </form>
+    </section>
+</body>
+
+
+
+<!-- <title>Registration form</title>
+<body>
+    <section class="container">
+        <header>Registration form</header>
+        <form action="#" class="form">
+            <div class="input-box">
+                <label>Full Name</label>
+                <input type="text" placeholder="Enter full name" required/>
+            </div>
+
+            <div class="input-box">
+                <label>Email adress</label>
+                <input type="text" placeholder="Enter email adress" required/>
+            </div>
+
+            <div class="column">
+                <div class="input-box">
+                    <label>Phone number</label>
+                    <input type="number" placeholder="Enter phone number" required/>
+                </div>
+
+                <div class="input-box">
+                    <label>Birth date</label>
+                    <input type="date" placeholder="Enter birth date" required/>
                 </div>
             </div>
 
-            <input type="text" placeholder="Enter your city" required/>
-            <input type="text" placeholder="Enter your region" required/>
-            <input type="text" placeholder="Enter postal code" required/>
-        </div> 
+            <div class="gender-box">
+                <h3>Gender</h3>
+                <div class="gender-option">
+                    <div class="gender">
+                        <input type="radio" id="check-male" name="gender" checked>
+                        <label for="check-male">Male</label>
+                    </div>
+                    <div class="gender">
+                        <input type="radio" id="check-female" name="gender">
+                        <label for="check-female">Female</label>
+                    </div>
+                    <div class="gender">
+                        <input type="radio" id="check-other" name="gender">
+                        <label for="check-other">Prefer not to say</label>
+                    </div>
+                </div>
+            </div>
 
-<button>Submit</button>
+            <div class="input-box addres">
+                <label>Address</label>
+                <input type="text" placeholder="Enter street address" required/>
+                <input type="text" placeholder="Enter street address line 2" required/>
+                
+                <div class="column">
+                    <div class="select-box">
+                        <select>
+                            <option hidden>Country</option>
+                            <option>Amrica</option>
+                            <option>Japan</option>
+                            <option>India</option>
+                            <option>Nepal</option>
+                        </select>
+                    </div>
+                    <input type="text" placeholder="Enter your city" required/>
+                </div>
+                
+                <div class="column">
+                    
+                <input type="text" placeholder="Enter region" required/>
+                <input type="number" placeholder="Enter postal code" required/>
+                </div>
+            </div>
 
-    </form>
-</section>
-</div>
+            <button>Submit</button>
+
+
+        </form>
+    </section>
+</body> -->
