--- a/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.css
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.css
@@ -1,71 +1,77 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+* {
     margin: 0;
     padding: 0;
-    justify-content: center;
-    align-items: center;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+body {
     min-height: 100vh;
-    font-family: 'Jost', sans-serif;
-    background: linear-gradient(to bottom, #0f0c29,#302b63,#24243e);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: rgb(130, 106, 251);
+    background-image: url(fitnes2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-
-.main {
-    width: 350px;
-    height: 500px;
-    background: red;
-    overflow: hidden;
-    background: url("fitness.jpg") no-repeat center / cover; 
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
-}
-
-#chk{
-    display: none;
-}
-
-.signup {
+.container {
     position: relative;
+    max-width: 700px;
+    background: #C0C0C0;
     width: 100%;
-    height: 100%;
+    padding: 25px; 
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-label {
-    color: #fff;
-    font-size: 2.3em;
-    justify-content: center;
-    display: flex;
-    margin: 60px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+.container header {
+    font-size: 1.5rem;
+    color: #333;
+    font-weight: 500;
+    text-align: center;
 }
-input {
-    width: 60%;
-    height: 20px;
-    background: #e0dede;
-    justify-content: center;
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    border: none;
+.container .form {
+    margin-top: 10px;
+   
+}
+.form .input-box {
+    width: 100%;
+    margin-top: 15px;
+}
+
+.input-box label {
+    color: #333;
+}
+.form .input-box input {
+    position: relative;
+    height: 10%;
+    width: 100%;
     outline: none;
-    border-radius: 5px;
-
+    font-size: 1rem;
+    color: #707070;
+    margin-top: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+    padding-left: 0;
+}
+.form .btn2 {
+    height: 55px;
+    width: 100%;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    margin-top: 30px;
+    cursor: pointer;
+    border-radius: 6px;
+    font-weight: 400;
+    transition: all 0.2s ease;
+    background-color: rgb(130, 106, 251);
 }
 
-button {
-    width: 60%;
-    height: 40px;
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: #573b8a;
-    font-size: 1em;
-    font-weight: bold;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    transition: .2s ease-in;
-    cursor: pointer;
+.form button:hover {
+    background-color: rgb(88, 56, 250); 
 }
