--- a/glavnaapp/fitnesappFrontend/src/app/pages/main/main.component.css
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/main/main.component.css
@@ -7,21 +7,28 @@
     column-gap: 8px;
     padding-left: 1%;
     padding-top: 1%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .example-card {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 250px;
+    max-height: 250px;
+    display: flex;
+    flex-wrap: wrap;
   }
   
   .example-header-image {
     /* background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg'); */
     background-image: url(fitness.jpg);
     background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .navtop {
     display: flex;
+    flex-wrap: wrap;
   }
   /* .navtop .column {
     align-self:flex-end;
@@ -37,4 +44,73 @@
     column-gap: 10px;
     padding-left: 85%;
   }
+  .cont {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    column-gap: 15px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 8px;
+    column-gap: 8px;
+    width: 100%;
+    height: 90%;
+  }
+  .pagg {
+    position: relative;
+    display:flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    width: 100%;
+    height: 10%;
+    padding-bottom: 6px;
+   
+    
+  }
+ .search .search-bar {
+  background-color: white;
+ }
+ .search-input {
+  position: relative;
+    height: 80%;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    color: rgba(0, 0, 0, .87);
+    border: 1px solid #ddd;
+    border-radius: 6px;
+ }
+ .search-input::placeholder {
+  font-size: 16px;
+    color: rgba(0, 0, 0, .87);
+ }
+ .search-input:focus::placeholder {
+  color: transparent;
+ }
+ .select-box {
+  position: relative;
+    height: 80%;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    color: rgba(0, 0, 0, .87);
+    border: 1px solid #ddd;
+    border-radius: 6px;
+ }
+
+
  
