--- a/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.html
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/login/login.component.html
@@ -10,7 +10,10 @@
                 <label for="usrPassword">Lozinka</label>
                 <input formControlName="password" type="password" id="usrPassword" placeholder="Unesite lozinku" style="height: 40px;" required/>
             </div>
+            <div class="btm">
             <button class="btn2" style="height: 45px;" type="submit">Prijava</button>
+            <a routerLink="/registration"><Label class="lbl">Nemate nalog? Registrujte se ovdje.</Label></a>
+        </div>
         </form>
     </section>
 </body>
