--- a/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.css
+++ b/glavnaapp/fitnesappFrontend/src/app/pages/registration/registration.component.css
@@ -123,7 +123,7 @@ body {
     color: #707070;
 }
 
-.addres :where(input, .select-box, .btn) {
+.addres :where(input, .select-box, .btn, .chsfile) {
     margin-top: 15px;
     width: 100%;
 }
@@ -164,9 +164,30 @@ body {
     transition: all 0.2s ease;
     background-color: rgb(130, 106, 251);
 }
-
+input[type="file"]::file-selector-button {
+    
+    /* functional */
+  height: 100%;
+  display: flex;
+  color: #fff;
+  
+  
+  
+  /* cosmetic */
+  background-color: rgb(130, 106, 251);
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+input[type="file"]::file-selector-button:hover {
+    background-color: rgb(88, 56, 250);
+    
+}
 .form button:hover {
     background-color: rgb(88, 56, 250); 
+}
+.chsfile {
+    height: 55px;
+    width: 50%;
 }
 
 /* Responsive*/
